crates/reinhardt-pages/tests/ui/loader/fail/duplicate_cancellation.stderr
error: #[loader] accepts at most one CancellationToken extractor
 --> tests/ui/loader/fail/duplicate_cancellation.rs:6:2
  |
6 |     CancellationToken(second): CancellationToken,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `CancellationToken`
 --> tests/ui/loader/fail/duplicate_cancellation.rs:1:23
  |
1 | use reinhardt_pages::{CancellationToken, loader};
  |                       ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
